// chỉ định phiêm bản của protobuf mà ta muốn sử dụng
syntax = "proto3";

// từ khoá service để định nghĩa một service (một gói hàm)
// service list nhận một message rỗng và trả về list các actor
service ActorService {
    rpc List (Empty) returns (ActorList) {}
}
// message rỗng dùng để đưa vào những service không cần argument
message Empty {}

// mesage trong protobuf là các thể hiện của các class hoặc object trong các ngôn ngữ lập trình khác
message Actor{
    // các số 1 2 3 4 là các số viết theo định dạng của file proto. Do protocol
    // buffer lưu dữ liệu dưới dạng binary nên ta phải định danh các giá trị bằng số này
    string first_name = 2;
    string last_name = 3;
}

message ActorList {
    // từ khoá repated đóng vai trò là một danh sách
   repeated Actor actor = 1;
}